--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -93,5 +93,7 @@
             <label for="country">Country:</label>
             <input type="text" id="country" name="country" required>
 
-            <label for="school">School:</label>
-            <input type
+            <input type="submit" value="Submit">
+        </form>
+</body>
+</html>
